--- a/app/src/main/res/layout/fragment_syllabus.xml
+++ b/app/src/main/res/layout/fragment_syllabus.xml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
             name="adapter"
-            type="com.stathis.unipiapp.ui.dashboard.professors.adapter.ProfessorsAdapter" />
+            type="com.stathis.unipiapp.ui.dashboard.syllabus.adapter.LessonAdapter" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#efefef"
-        tools:context=".ui.dashboard.professors.ProfessorsFragment">
+        tools:context=".ui.dashboard.syllabus.SyllabusFragment">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/professors_recycler"
+            android:id="@+id/lessons_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             adapter="@{adapter}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:itemCount="10"
-            tools:listitem="@layout/holder_professor_item" />
+            tools:listitem="@layout/holder_lesson_item" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
