--- a/app/src/main/res/layout/holder_lesson_item.xml
+++ b/app/src/main/res/layout/holder_lesson_item.xml
@@ -6,46 +6,32 @@
     <data>
         <variable
             name="model"
-            type="com.stathis.unipiapp.models.Professor" />
-
-        <variable
-            name="callback"
-            type="com.stathis.unipiapp.callbacks.UnipiCallback" />
+            type="com.stathis.unipiapp.models.Lesson" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dimen_10"
-        android:onClick="@{(view) -> callback.onItemTap(view)}">
+        android:padding="@dimen/dimen_10" >
 
         <TextView
-            android:id="@+id/professor_date"
+            android:id="@+id/lesson_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:text="@{model.fullName}"
+            android:text="@{model.title}"
             android:textColor="@color/unipi_blue"
             tools:text="@string/app_name"
             android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/professor_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/professor_date"
-            app:layout_constraintStart_toStartOf="parent"
-            android:text="@{model.title}"
-            android:textColor="@color/black"
-            tools:text="@string/app_name" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_1"
             android:layout_marginTop="@dimen/dimen_5"
             android:background="@color/unipi_red"
-            app:layout_constraintTop_toBottomOf="@id/professor_title"/>
+            app:layout_constraintTop_toBottomOf="@id/lesson_title"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
