--- a/app/src/main/res/menu/app_menu.xml
+++ b/app/src/main/res/menu/app_menu.xml
@@ -7,5 +7,7 @@
     <item android:id="@+id/nav_professors"
         android:title="@string/menu_professors" />
 
+    <item android:id="@+id/nav_syllabus"
+        android:title="@string/syllabus" />
 
 </menu>
