--- a/app/src/main/res/navigation/app_nav.xml
+++ b/app/src/main/res/navigation/app_nav.xml
@@ -12,5 +12,9 @@
         android:id="@+id/nav_professors"
         android:name="com.stathis.unipiapp.ui.dashboard.professors.ProfessorsFragment"
         android:label="ProfessorsFragment" />
+    <fragment
+        android:id="@+id/nav_syllabus"
+        android:name="com.stathis.unipiapp.ui.dashboard.syllabus.SyllabusFragment"
+        android:label="SyllabusFragment" />
 
 </navigation>
