--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
 
     <color name="unipi_red">#A22631</color>
     <color name="unipi_blue">#222C54</color>
+
+    <color name="shimmer_grey">#666666</color>
 </resources>
