--- a/app/src/main/res/layout/activity_syllabus.xml
+++ b/app/src/main/res/layout/activity_syllabus.xml
@@ -6,9 +6,14 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.syllabus.SyllabusActivity" >
+        tools:context=".ui.webview.WebviewActivity" >
 
-
+        <WebView
+            android:id="@+id/webview_window"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
