--- a/app/src/main/res/layout/activity_lessons.xml
+++ b/app/src/main/res/layout/activity_lessons.xml
@@ -3,13 +3,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" >
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.stathis.unipiapp.ui.lessons.LessonsViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/grey_bg"
         tools:context=".ui.lessons.LessonsActivity">
 
-
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/lessons_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            adapter="@{viewModel.adapter}"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="10"
+            tools:listitem="@layout/holder_semester_item" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
