--- a/app/src/main/res/menu/app_menu.xml
+++ b/app/src/main/res/menu/app_menu.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item android:id="@+id/nav_main"
+        android:title="@string/menu_main" />
+
     <item android:id="@+id/nav_announcements"
         android:title="@string/menu_announcements" />
 
