--- a/app/src/main/res/navigation/app_nav.xml
+++ b/app/src/main/res/navigation/app_nav.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/app_nav"
-    app:startDestination="@id/nav_announcements">
+    app:startDestination="@id/nav_main">
 
     <fragment
         android:id="@+id/nav_announcements"
@@ -16,5 +16,9 @@
         android:id="@+id/nav_syllabus"
         android:name="com.stathis.unipiapp.ui.dashboard.syllabus.SyllabusFragment"
         android:label="SyllabusFragment" />
+    <fragment
+        android:id="@+id/nav_main"
+        android:name="com.stathis.unipiapp.ui.dashboard.main.MainFragment"
+        android:label="MainFragment" />
 
 </navigation>
