--- a/app/src/main/res/layout/activity_announcements.xml
+++ b/app/src/main/res/layout/activity_announcements.xml
@@ -5,21 +5,21 @@
 
     <data>
         <variable
-            name="adapter"
-            type="com.stathis.unipiapp.ui.dashboard.announcements.adapter.AnnouncementAdapter" />
+            name="viewModel"
+            type="com.stathis.unipiapp.ui.announcements.AnnouncementsViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#efefef"
-        tools:context=".ui.dashboard.announcements.AnnouncementsFragment" >
+        android:background="@color/grey_bg"
+        tools:context=".ui.announcements.AnnouncementsActivity" >
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            adapter="@{adapter}"
+            adapter="@{viewModel.adapter}"
             android:id="@+id/announcements_recycler"
             tools:listitem="@layout/holder_announcement_item"
             tools:itemCount="10"
