--- a/app/src/main/res/layout/activity_professors.xml
+++ b/app/src/main/res/layout/activity_professors.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <data>
         <variable
-            name="adapter"
-            type="com.stathis.unipiapp.ui.dashboard.professors.adapter.ProfessorsAdapter" />
+            name="viewModel"
+            type="com.stathis.unipiapp.ui.professors.ProfessorsViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#efefef"
-        tools:context=".ui.dashboard.professors.ProfessorsFragment">
+        android:background="@color/grey_bg"
+        tools:context=".ui.professors.ProfessorsActivity">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/professors_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            adapter="@{adapter}"
+            adapter="@{viewModel.adapter}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:itemCount="10"
             tools:listitem="@layout/holder_professor_item" />
