--- a/app/src/main/res/menu/app_menu.xml
+++ b/app/src/main/res/menu/app_menu.xml
@@ -4,13 +4,13 @@
     <item android:id="@+id/nav_main"
         android:title="@string/menu_main" />
 
-    <item android:id="@+id/nav_announcements"
-        android:title="@string/menu_announcements" />
+    <item android:id="@+id/nav_two"
+        android:title="Item 2" />
 
-    <item android:id="@+id/nav_professors"
-        android:title="@string/menu_professors" />
+    <item android:id="@+id/nav_three"
+        android:title="Item 3" />
 
-    <item android:id="@+id/nav_syllabus"
-        android:title="@string/syllabus" />
+    <item android:id="@+id/nav_four"
+        android:title="Item 4" />
 
 </menu>
