--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.stathis.unipiapp.ui.dashboard.main.MainViewModel" />
@@ -13,17 +14,63 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/grey_bg"
-        tools:context=".ui.dashboard.main.MainFragment" >
+        tools:context=".ui.dashboard.main.MainFragment">
+
+        <View
+            android:id="@+id/top_header"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_100"
+            android:background="@drawable/round_corners_bottom"
+            android:backgroundTint="@color/unipi_blue"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/unipi_logo"
+            android:layout_width="@dimen/image_300"
+            android:layout_height="wrap_content"
+            android:src="@drawable/logo"
+            app:layout_constraintBottom_toBottomOf="@id/top_header"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/top_header" />
+
+        <TextView
+            android:id="@+id/categories_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="@dimen/dimen_16"
+            android:paddingTop="@dimen/dimen_16"
+            android:text="@string/categories"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/top_header" />
+
+        <TextView
+            android:id="@+id/categories_all"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/dimen_16"
+            android:paddingEnd="@dimen/dimen_16"
+            android:text="@string/all_categories"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="@id/categories_header"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/main_screen_recycler"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
             adapter="@{viewModel.adapter}"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            android:padding="@dimen/dimen_10"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/categories_header"
+            app:spanCount="2"
             tools:itemCount="10"
-            tools:listitem="@layout/holder_semester_item" />
+            tools:listitem="@layout/holder_home_item" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
