--- a/app/src/main/res/layout/holder_home_item.xml
+++ b/app/src/main/res/layout/holder_home_item.xml
@@ -17,9 +17,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="@{(view) -> callback.onItemTap(view)}"
-        android:layout_marginStart="@dimen/dimen_10"
-        android:layout_marginTop="@dimen/dimen_5"
-        android:layout_marginEnd="@dimen/dimen_10" >
+        android:layout_marginStart="@dimen/dimen_5"
+        android:layout_marginEnd="@dimen/dimen_5"
+        android:layout_marginTop="@dimen/dimen_10"
+        app:cardCornerRadius="@dimen/dimen_10">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -29,12 +30,15 @@
                 android:id="@+id/home_item_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:padding="20dp"
-                android:textColor="@color/black"
+                android:paddingTop="@dimen/dimen_10"
+                android:paddingBottom="@dimen/dimen_10"
+                android:textColor="@color/unipi_blue"
+                android:textSize="16sp"
+                android:textStyle="bold"
                 android:text="@{model.title}"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/home_item_img"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="@id/home_item_img"
+                app:layout_constraintTop_toBottomOf="@id/home_item_img"
                 tools:text="@string/app_name" />
 
             <ImageView
@@ -43,11 +47,11 @@
                 android:layout_height="60dp"
                 android:layout_marginStart="@dimen/dimen_5"
                 android:src="@mipmap/ic_launcher"
+                android:layout_margin="16dp"
                 android:scaleType="centerCrop"
                 android:contentDescription="@string/app_name"
-                app:layout_constraintBottom_toBottomOf="@id/home_item_title"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/home_item_title" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
