--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="dimen_5">5dp</dimen>
     <dimen name="dimen_1">1dp</dimen>
     <dimen name="dimen_10">10dp</dimen>
+    <dimen name="height_100">100dp</dimen>
+    <dimen name="image_300">300dp</dimen>
+    <dimen name="dimen_16">16dp</dimen>
 </resources>
