Announcements Screen | Pagination (?)

--- a/app/src/main/res/layout/holder_announcement_item.xml
+++ b/app/src/main/res/layout/holder_announcement_item.xml
@@ -16,7 +16,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dimen_10"
+        android:paddingTop="@dimen/dimen_10"
+        android:paddingStart="@dimen/dimen_10"
+        android:paddingEnd="@dimen/dimen_10"
         android:onClick="@{(view) -> callback.onItemTap(view)}">
 
         <TextView
@@ -43,7 +45,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_1"
-            android:layout_marginTop="@dimen/dimen_5"
+            android:layout_marginTop="@dimen/dimen_10"
             android:background="@color/unipi_red"
             app:layout_constraintTop_toBottomOf="@id/announcement_title"/>
 
