--- a/app/src/main/res/menu/app_menu.xml
+++ b/app/src/main/res/menu/app_menu.xml
@@ -2,6 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/nav_main"
+        android:icon="@drawable/ic_home"
         android:title="@string/menu_main" />
 
     <item android:id="@+id/nav_two"
