--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="height_100">100dp</dimen>
     <dimen name="image_300">300dp</dimen>
     <dimen name="dimen_16">16dp</dimen>
+    <dimen name="height_70">70dp</dimen>
 </resources>
