Minor Bug Fixes

--- a/app/src/main/res/layout/activity_students.xml
+++ b/app/src/main/res/layout/activity_students.xml
@@ -6,6 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/grey_bg"
         tools:context=".ui.students.StudentsActivity">
 
         <androidx.recyclerview.widget.RecyclerView
@@ -13,6 +14,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:paddingStart="@dimen/dimen_10"
+            android:paddingEnd="@dimen/dimen_10"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
