--- a/app/src/main/res/layout/holder_services_item.xml
+++ b/app/src/main/res/layout/holder_services_item.xml
@@ -13,43 +13,45 @@
             type="com.stathis.unipiapp.callbacks.UnipiCallback" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dimen_10"
+        android:layout_marginStart="@dimen/dimen_5"
+        android:layout_marginEnd="@dimen/dimen_5"
+        android:layout_marginTop="@dimen/dimen_10"
+        app:cardCornerRadius="@dimen/dimen_10"
         android:onClick="@{(view) -> callback.onItemTap(view)}">
 
-        <ImageView
-            android:id="@+id/service_img"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            loadImageFromUrl="@{model.imageUrl}"
-            android:scaleType="centerCrop"
-            android:contentDescription="@string/app_name"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/service_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            android:paddingStart="@dimen/dimen_10"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/service_img"
-            android:text="@{model.title}"
-            android:textColor="@color/unipi_blue"
-            tools:text="@string/app_name"
-            android:textStyle="bold"/>
-
-        <View
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_1"
-            android:layout_marginTop="@dimen/dimen_5"
-            android:background="@color/unipi_red"
-            app:layout_constraintTop_toBottomOf="@id/service_img"/>
+            android:layout_height="match_parent">
 
+            <ImageView
+                android:id="@+id/service_img"
+                android:layout_width="@dimen/height_70"
+                android:layout_height="@dimen/height_70"
+                loadImageFromUrl="@{model.imageUrl}"
+                android:scaleType="centerCrop"
+                android:layout_marginTop="@dimen/dimen_10"
+                tools:src="@drawable/ic_unipi_logo_svg"
+                android:contentDescription="@string/app_name"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/service_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:padding="@dimen/dimen_10"
+                app:layout_constraintTop_toBottomOf="@id/service_img"
+                app:layout_constraintStart_toEndOf="@id/service_img"
+                android:text="@{model.title}"
+                android:textColor="@color/unipi_blue"
+                tools:text="@string/app_name"
+                android:textStyle="bold"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
