--- a/app/src/main/res/layout/holder_stud_vertical_nested_item.xml
+++ b/app/src/main/res/layout/holder_stud_vertical_nested_item.xml
@@ -38,7 +38,9 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             adapter="@{adapter}"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:spanCount="2"
+            tools:listitem="@layout/holder_services_item"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/nested_title" />
 
