--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -26,10 +26,11 @@
 
         <ImageView
             android:id="@+id/unipi_logo"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="@dimen/image_80"
+            android:layout_height="@dimen/image_80"
             android:layout_marginStart="@dimen/dimen_10"
             android:scaleType="fitCenter"
+            android:contentDescription="@string/app_name"
             android:src="@drawable/ic_unipi_logo_svg"
             app:layout_constraintBottom_toBottomOf="@id/top_header"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,26 +38,24 @@
 
         <TextView
             android:id="@+id/unipi_title"
+            style="@style/text_18_white"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/dimen_10"
             android:paddingStart="@dimen/dimen_10"
+            android:paddingTop="@dimen/dimen_10"
             android:text="@string/main_screen_title"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            app:layout_constraintStart_toEndOf="@id/unipi_logo"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/unipi_logo"
             app:layout_constraintTop_toTopOf="@id/unipi_logo" />
 
         <TextView
             android:id="@+id/categories_header"
+            style="@style/text_18_black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingStart="@dimen/dimen_16"
             android:paddingTop="@dimen/dimen_16"
             android:text="@string/categories"
-            android:textColor="@color/black"
-            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/top_header" />
 
