--- a/app/src/main/res/layout/activity_announcements.xml
+++ b/app/src/main/res/layout/activity_announcements.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -13,17 +13,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/grey_bg"
-        tools:context=".ui.announcements.AnnouncementsActivity" >
+        tools:context=".ui.announcements.AnnouncementsActivity">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/announcements_recycler"
+            style="@style/VerticalRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            adapter="@{viewModel.adapter}"
-            android:id="@+id/announcements_recycler"
-            tools:listitem="@layout/holder_announcement_item"
+            android:adapter="@{viewModel.adapter}"
             tools:itemCount="10"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+            tools:listitem="@layout/holder_announcement_item" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
