--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -13,15 +13,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/grey_bg"
-        tools:context=".ui.contact.ContactActivity" >
+        tools:context=".ui.contact.ContactActivity">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/contact_screen_recycler"
+            style="@style/VerticalRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            adapter="@{adapter}"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+            android:adapter="@{adapter}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
