--- a/app/src/main/res/layout/activity_lessons.xml
+++ b/app/src/main/res/layout/activity_lessons.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -17,11 +17,10 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/lessons_recycler"
+            style="@style/VerticalRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            adapter="@{viewModel.adapter}"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:adapter="@{viewModel.adapter}"
             tools:itemCount="10"
             tools:listitem="@layout/holder_semester_item" />
 
