--- a/app/src/main/res/layout/activity_services.xml
+++ b/app/src/main/res/layout/activity_services.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -12,17 +12,16 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.services.ServicesActivity" >
+        tools:context=".ui.services.ServicesActivity">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/services_recycler"
+            style="@style/VerticalRecyclerView"
+            android:adapter="@{viewModel.adapter}"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            adapter="@{viewModel.adapter}"
-            android:id="@+id/services_recycler"
-            tools:listitem="@layout/holder_announcement_item"
             tools:itemCount="10"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+            tools:listitem="@layout/holder_announcement_item" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
