--- a/app/src/main/res/layout/activity_syllabus.xml
+++ b/app/src/main/res/layout/activity_syllabus.xml
@@ -5,8 +5,8 @@
 
     <data>
         <variable
-            name="adapter"
-            type="com.stathis.unipiapp.ui.syllabus.adapter.SemesterAdapter" />
+            name="viewModel"
+            type="com.stathis.unipiapp.ui.syllabus.SyllabusViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,7 +20,7 @@
             style="@style/VerticalRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:adapter="@{adapter}"
+            android:adapter="@{viewModel.adapter}"
             tools:itemCount="10"
             tools:listitem="@layout/holder_semester_item" />
 
