--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -18,8 +18,8 @@
             android:id="@+id/about_app_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="20dp"
             android:justificationMode="inter_word"
+            android:padding="@dimen/dimen_20"
             android:text="@{about_text}"
             tools:text="@string/lorem_ipsum_2" />
 
