--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -5,8 +5,8 @@
 
     <data>
         <variable
-            name="adapter"
-            type="com.stathis.unipiapp.ui.contact.adapter.ContactAdapter" />
+            name="viewModel"
+            type="com.stathis.unipiapp.ui.contact.ContactViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,7 +20,7 @@
             style="@style/VerticalRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:adapter="@{adapter}" />
+            android:adapter="@{viewModel.adapter}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
