--- a/app/src/main/res/layout/contact_screen_bottom_sheet.xml
+++ b/app/src/main/res/layout/contact_screen_bottom_sheet.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/grey_bg">
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/bottom_sheet_title"
@@ -19,26 +19,46 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/bottom_sheet_email"
-            style="@style/text_16_black"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/dimen_16"
-            android:text="@string/send_email"
-            app:layout_constraintEnd_toEndOf="parent"
+        <ImageView
+            android:id="@+id/email_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:paddingStart="@dimen/dimen_16"
+            android:src="@drawable/ic_email_blue"
+            app:layout_constraintBottom_toBottomOf="@id/bottom_sheet_email"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/bottom_sheet_title" />
 
         <TextView
+            android:id="@+id/bottom_sheet_email"
+            style="@style/text_16_black"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/dimen_16"
+            android:text="@string/send_email"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/email_icon"
+            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_title" />
+
+        <ImageView
+            android:id="@+id/phone_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:paddingStart="@dimen/dimen_16"
+            android:src="@drawable/ic_phone_blue"
+            app:layout_constraintBottom_toBottomOf="@id/bottom_sheet_telephone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_email" />
+
+        <TextView
             android:id="@+id/bottom_sheet_telephone"
             style="@style/text_16_black"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="@dimen/dimen_16"
             android:text="@string/call_option"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/phone_icon"
             app:layout_constraintTop_toBottomOf="@id/bottom_sheet_email" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
