--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="dimen_16">16dp</dimen>
     <dimen name="height_70">70dp</dimen>
     <dimen name="image_80">80dp</dimen>
+    <dimen name="dimen_20">20dp</dimen>
+    <dimen name="image_150">150dp</dimen>
 </resources>
