--- a/app/src/main/res/menu/app_menu.xml
+++ b/app/src/main/res/menu/app_menu.xml
@@ -5,8 +5,9 @@
         android:icon="@drawable/ic_home"
         android:title="@string/menu_main" />
 
-    <item android:id="@+id/nav_two"
-        android:title="Item 2" />
+    <item android:id="@+id/nav_lessons"
+        android:icon="@drawable/ic_home"
+        android:title="@string/nav_my_lessons" />
 
     <item android:id="@+id/nav_three"
         android:title="Item 3" />
