--- a/app/src/main/res/navigation/app_nav.xml
+++ b/app/src/main/res/navigation/app_nav.xml
@@ -5,20 +5,13 @@
     app:startDestination="@id/nav_main">
 
     <fragment
-        android:id="@+id/nav_announcements"
-        android:name="com.stathis.unipiapp.ui.dashboard.announcements.AnnouncementsFragment"
-        android:label="AnnouncementsFragment" />
-    <fragment
-        android:id="@+id/nav_professors"
-        android:name="com.stathis.unipiapp.ui.dashboard.professors.ProfessorsFragment"
-        android:label="ProfessorsFragment" />
-    <fragment
-        android:id="@+id/nav_syllabus"
-        android:name="com.stathis.unipiapp.ui.dashboard.syllabus.SyllabusFragment"
-        android:label="SyllabusFragment" />
-    <fragment
         android:id="@+id/nav_main"
         android:name="com.stathis.unipiapp.ui.dashboard.main.MainFragment"
         android:label="MainFragment" />
+
+    <fragment
+        android:id="@+id/nav_lessons"
+        android:name="com.stathis.unipiapp.ui.dashboard.lessons.MyLessonsFragment"
+        android:label="MyLessonsFragment" />
 
 </navigation>
