Eclass Lessons Screen | Basic UI

--- a/app/src/main/res/layout/holder_eclass_lesson_item.xml
+++ b/app/src/main/res/layout/holder_eclass_lesson_item.xml
@@ -7,11 +7,16 @@
         <variable
             name="model"
             type="com.stathis.unipiapp.ui.dashboard.lessons.model.EclassLesson" />
+
+        <variable
+            name="callback"
+            type="com.stathis.unipiapp.callbacks.UnipiCallback" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="@{(view) -> callback.onItemTap(view)}"
         android:padding="@dimen/dimen_10" >
 
         <TextView
