--- a/app/src/main/res/layout/activity_eclass_announcements.xml
+++ b/app/src/main/res/layout/activity_eclass_announcements.xml
@@ -3,11 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" >
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.stathis.unipiapp.ui.eclassAnnouncements.EclassAnnouncementsViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:id="@+id/eclass_announcements"
+            style="@style/VerticalRecyclerView"
+            android:adapter="@{viewModel.adapter}"
+            android:layout_height="match_parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
