--- a/app/src/main/res/layout/fragment_lessons.xml
+++ b/app/src/main/res/layout/fragment_lessons.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.stathis.unipiapp.ui.dashboard.lessons.MyLessonsViewModel" />
@@ -16,13 +17,15 @@
 
         <TextView
             android:id="@+id/my_lessons_greeting"
-            android:layout_width="wrap_content"
+            style="@style/text_18_blue_bold"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/dimen_16"
+            android:gravity="center_horizontal"
+            android:padding="@dimen/dimen_10"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="@string/eclass_user_greeting" />
+            android:text="@string/eclass_lessons_header" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/my_lessons_recycler"
@@ -30,8 +33,6 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:adapter="@{viewModel.adapter}"
-            android:paddingStart="@dimen/dimen_10"
-            android:paddingEnd="@dimen/dimen_10"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/my_lessons_greeting"
             tools:itemCount="10" />
