--- a/app/src/main/res/layout/holder_eclass_lesson_item.xml
+++ b/app/src/main/res/layout/holder_eclass_lesson_item.xml
@@ -13,30 +13,43 @@
             type="com.stathis.unipiapp.callbacks.UnipiCallback" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dimen_10"
-        android:onClick="@{(view) -> callback.onItemTap(view)}" >
+        android:onClick="@{(view) -> callback.onItemTap(view)}"
+        android:layout_marginStart="@dimen/dimen_10"
+        android:layout_marginTop="@dimen/dimen_5"
+        android:layout_marginEnd="@dimen/dimen_10" >
 
-        <TextView
-            android:id="@+id/lesson_title"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:text="@{model.title}"
-            android:textColor="@color/unipi_blue"
-            tools:text="@string/app_name"
-            android:textStyle="bold"/>
+            android:layout_height="match_parent">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_1"
-            android:layout_marginTop="@dimen/dimen_5"
-            android:background="@color/unipi_red"
-            app:layout_constraintTop_toBottomOf="@id/lesson_title"/>
+            <TextView
+                android:id="@+id/lesson_item_txt"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dimen_16"
+                setLessonText="@{model.title}"
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toStartOf="@id/lesson_right_img"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@string/app_name" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageView
+                android:id="@+id/lesson_right_img"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginEnd="@dimen/dimen_5"
+                android:src="@drawable/arrow_right"
+                android:contentDescription="@string/app_name"
+                app:layout_constraintBottom_toBottomOf="@id/lesson_item_txt"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/lesson_item_txt" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </layout>
